@@ -1,3 +1,6 @@
+2013-03-08 Molnar Karoly <molnarkaroly@users.sf.net>
+	* tools/device-manager.pl: bugfix
+
 2013-03-04 Molnar Karoly <molnarkaroly@users.sf.net>
 	* tools/device-help.pl: Synchronization with the modified gpprocessor.c.
 
